Fixed overflow display of main container

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-body{
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  user-select: none;
-}
-
 :root{
   --bg-color: #2C3930;
   --fg-color: #DCD7C9;
@@ -12,21 +6,27 @@ body{
   --highlight-btn: #3d7b9f;/* use in js */
 }
 
-.wrapper{
+*{
+  box-sizing: border-box;
+}
+
+body{
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  user-select: none;
   background-color: var(--bg-color);
   height: 100dvh;
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .main-container{
-  width: 720px;
-  height: 800px;
   background-color: var(--primary-color);
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .tools{
@@ -77,15 +77,14 @@ body{
   }
 }
 
-
 .sketch-container{
   display: flex;
   flex-wrap: wrap;
-  width: 100%;
-  height: 90%;
+  width: 700px;
+  height: 700px;
   background-color: var(--fg-color) !important;
 }
 
 .grid-box{
-  border: 1px solid rgba(255, 255, 255, 0);
+  border: 1px solid rgba(0, 0, 0, 0);
 }
